<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">
    <!-- LANGUAGES -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/card_item_padding">
                <TextView
                    android:text="@string/language_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    />
                <Spinner
                    android:id="@+id/inputSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:entries="@array/languages"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/card_item_padding">
                <TextView
                    android:text="@string/language_output"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    />
                <Spinner
                    android:id="@+id/outputSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:entries="@array/languages"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <!-- INPUT TEXT -->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardUseCompatPadding="true"
        android:layout_below="@+id/card_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_item_padding">
            <EditText
                android:id="@+id/etTranslate"
                android:hint="@string/translation_hint"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnTranslate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etTranslate"
                android:text="@string/translate"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <!-- RESULT -->
    <android.support.v7.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius"
        card_view:cardElevation="@dimen/card_elevation"
        card_view:cardUseCompatPadding="true"
        android:layout_below="@+id/card_view2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:textColor="@android:color/black"
            android:visibility="gone"
            android:gravity="center"
            />
    </android.support.v7.widget.CardView>
</RelativeLayout>